--- a/SIG_Rolling_Sharpe.ipynb
+++ b/SIG_Rolling_Sharpe.ipynb
@@ -35,8 +35,8 @@
       "source": [
         "trading_days = 252\n",
         "ticker_CSCO = yf.Ticker('CSCO') #Cisco - tentative company\n",
-        "ticker_TMUS = yf.Ticker('NTGR') #\n",
-        "ticker_GSPC = yf.Ticker('^GSPC') #Arista Networks\n",
+        "ticker_TMUS = yf.Ticker('NTGR') #Netgear - competitor\n",
+        "ticker_GSPC = yf.Ticker('^GSPC') #S&P 500, benchmark\n",
         "prices_CSCO = ticker_CSCO.history(period='5y')['Close']\n",
         "prices_TMUS = ticker_TMUS.history(period='5y')['Close']\n",
         "prices_GSPC = ticker_GSPC.history(period='5y')['Close']\n",
